Fixed results sidebar alignment and used contrast color

--- a/src/components/Brainstormer/ResultsSidebar/ResultsSidebar.scss
+++ b/src/components/Brainstormer/ResultsSidebar/ResultsSidebar.scss
@@ -2,11 +2,10 @@
     background-color: #eee;
     flex: 1;
     display: flex;
-    justify-content: center;
     flex-direction: column;
     .card.selected {
         &>.card-header {
-            background-color: rgb(92, 218, 46);
+            background-color: #ff7f17;
         }
         .results-section-body {
             max-height: 83vh;
